--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,9 @@
 # Ignore development files
 /dev/*
 
-# Ignore R package R (for now...)
+# Ignore R package files (for now...)
 /man/*
 /DESCRIPTION
 /NAMESPACE
 /Read-and-delete-me
+.Rbuildignore
