--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ S3method(summary,partial.validation)
 S3method(summary,validation)
 S3method(summary,veritas.pid)
 S3method(summary,veritas.split)
+export("%>%")
 export(createSingleSocialNetwork)
 export(createSocialNetworks)
 export(interactSnMeasures)
@@ -15,3 +16,4 @@ export(socialNetworkMeasures)
 export(transformData)
 export(validateData)
 export(validateNAs)
+importFrom(magrittr,"%>%")
